// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<div>
  <label
    className="label variant-photo label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests disabled 1`] = `
<div>
  <label
    className="label variant-photo label-noimage"
  />
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests icon 1`] = `
<div>
  <label
    className="label variant-icon label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-small"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
    </div>
  </label>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        aspect={1}
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      />
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests open modal 1`] = `
<div>
  <label
    className="label variant-photo label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <BoxModal
    open={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests with error & helperText 1`] = `
<div>
  <label
    className="label variant-photo label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <ForwardRef(Typography)
    align="left"
  >
    <HelperText
      error={true}
    >
      text
    </HelperText>
  </ForwardRef(Typography)>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests with error 1`] = `
<div>
  <label
    className="label variant-photo label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests with helperText & icon variant 1`] = `
<div>
  <label
    className="label variant-icon label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-small"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
    </div>
  </label>
  <ForwardRef(Typography)
    align="center"
  >
    <HelperText>
      xxx
    </HelperText>
  </ForwardRef(Typography)>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        aspect={1}
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      />
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests with helperText 1`] = `
<div>
  <label
    className="label variant-photo label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <ForwardRef(Typography)
    align="left"
  >
    <HelperText>
      text
    </HelperText>
  </ForwardRef(Typography)>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;

exports[`Shallow Snapshot Tests with src 1`] = `
<div>
  <label
    className="label variant-photo label-active"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[Function]}
      type="file"
    />
    <img
      className="img variant-photo"
      src="https://xxx.image.png"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <BoxModal
    open={false}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "m": 2,
          "textAlign": "center",
        }
      }
    >
      <u
        ariaLabels={
          Object {
            "cropArea": "Use the arrow keys to move the crop selection area",
            "eDragHandle": "Use the up and down arrow keys to move the east drag handle to change the crop selection area",
            "nDragHandle": "Use the up and down arrow keys to move the north drag handle to change the crop selection area",
            "neDragHandle": "Use the arrow keys to move the north east drag handle to change the crop selection area",
            "nwDragHandle": "Use the arrow keys to move the north west drag handle to change the crop selection area",
            "sDragHandle": "Use the up and down arrow keys to move the south drag handle to change the crop selection area",
            "seDragHandle": "Use the arrow keys to move the south east drag handle to change the crop selection area",
            "swDragHandle": "Use the arrow keys to move the south west drag handle to change the crop selection area",
            "wDragHandle": "Use the up and down arrow keys to move the west drag handle to change the crop selection area",
          }
        }
        className="crop"
        keepSelection={true}
        onChange={[Function]}
      >
        <img />
      </u>
    </ForwardRef(Box)>
    <ForwardRef(Grid)
      container={true}
      sx={
        Object {
          "p": 2,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="left"
          component="div"
        >
          <ForwardRef(Button)
            color="info"
            disabled={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            画像切り取り
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={6}
      >
        <ForwardRef(Typography)
          align="right"
          component="div"
        >
          <ForwardRef(Button)
            onClick={[Function]}
            variant="contained"
          >
            決定
          </ForwardRef(Button)>
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </BoxModal>
</div>
`;
